--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" href="./css/main.min.css">
 	</head>
 	<body>
-		<header class="header">
+		<!-- <header class="header">
 			<div class="container header__container navigation">
 				<a class="logo" href=""> <span class="logo-part-one">Web</span>Studio</a>
 				<nav>
@@ -49,10 +49,10 @@
 					>
 				</ul>
 			</div>
-		</header>
+		</header> -->
 		<main>
 			<section class="hero">
-				<div class="container">
+				<div class="hero__container container">
 					<h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
 					<button data-modal-open class="hero__btn" type="button">Замовити послугу</button>
 				</div>
@@ -97,10 +97,10 @@
 							<h3 class="about__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 							<p class="about__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 						</li>
-					</ul>
-				</div>
-			</section>
-			<section class="occupation">
+						</ul>
+						</div>
+						</section>
+			<!-- <section class="occupation">
 				<div class="container">
 					<h2 class="title">Чим ми займаємося</h2>
 					<ul class="ocuppation__list list">
@@ -124,8 +124,8 @@
 						</li>
 					</ul>
 				</div>
-			</section>
-			<section class="team">
+			</section> -->
+			<!-- <section class="team">
 				<div class="container container-team">
 					<h2 class="title">Наша команда</h2>
 					<ul class="team-list list">
@@ -279,8 +279,8 @@
 						</li>
 					</ul>
 				</div>
-			</section>
-			<section class="clients">
+			</section> -->
+			<!-- <section class="clients">
 				<div class="container">
 					<h2 class="title">Постійні клієнти</h2>
 					<ul class="clients-list list">
@@ -322,9 +322,9 @@
 						></li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 		</main>
-		<footer class="footer">
+		<!-- <footer class="footer">
 			<div class="container">
 				<div class="container-footer">
 					<a class="logo footer-logo" href=""> <span class="logo-part-one">Web</span>Studio</a>
@@ -398,9 +398,9 @@
 					</button>
 				</form>
 			</div>
-		</footer>
+		</footer> -->
 
-		<div class="backdrop is-hidden" data-modal>
+		<!-- <div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button data-modal-close class="btn-close">
 					<svg width="18" height="18">
@@ -442,7 +442,7 @@
 					<button class="modal-btn" type="submit">Відправити</button>
 				</form>
 			</div>
-		</div>
-		<script src="./js/modal.js"></script>
+		</div> -->
+		<!-- <script src="./js/modal.js"></script> -->
 	</body>
 </html>
