--- a/index.html
+++ b/index.html
@@ -452,9 +452,10 @@
 						</li>
 					</ul>
 				</div>
+
 				<form class="subscription-box">
 					<div class="footer-input-box">
-						<input type="email" class="footer-input" placeholder="E-mail" id="mail" />
+						<input type="email" name="email" class="footer-input" placeholder="E-mail" id="mail" />
 						<label for="mail" class="footer-label">Підпишіться на розсилку</label>
 					</div>
 					<button type="submit" class="footer-btn"
@@ -466,5 +467,52 @@
 				</form>
 			</div>
 		</footer>
+
+		<div class="backdrop is-hidden" data-modal>
+			<div class="modal">
+				<button data-modal-close class="btn-close">
+					<svg width="18" height="18">
+						<use href="./images/symbol-defs.svg#icon-close"></use>
+					</svg>
+				</button>
+				<p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+				<form class="form-box">
+					<label class="modal-label" for="user-name">Ім'я</label>
+					<div class="input-wrap">
+						<input class="modal-input" type="text" name="name" id="user-name" required />
+						<svg class="modal-input-icon" width="18" height="18">
+							<use href="./images/symbol-defs.svg#icon-person-form"></use>
+						</svg>
+					</div>
+
+					<label class="modal-label" for="user-tel">Телефон</label>
+					<div class="input-wrap">
+						<input class="modal-input" type="tel" name="tel" id="user-tel" required />
+						<svg class="modal-input-icon" width="18" height="18">
+							<use href="./images/symbol-defs.svg#icon-phone-form"></use>
+						</svg>
+					</div>
+
+					<label class="modal-label" for="user-email">Пошта</label>
+					<div class="input-wrap">
+						<input class="modal-input" type="email" name="email" id="user-email" required />
+						<svg class="modal-input-icon" width="18" height="18">
+							<use href="./images/symbol-defs.svg#icon-email-form"></use>
+						</svg>
+					</div>
+
+					<label class="modal-label" for="comment">Коментар</label>
+					<textarea name="comment" id="comment" class="comment-box" placeholder="Введіть текст"></textarea>
+
+					<input type="checkbox" class="input-check visually-hidden" name="privacy" value="true" id="privacy" />
+					<label for="privacy" class="check-text"
+						>Погоджуюся з розсилкою та приймаю <a class="link-policy" href="">Умови договору</a></label
+					>
+
+					<button class="modal-btn" type="submit">Відправити</button>
+				</form>
+			</div>
+		</div>
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
