--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 				</div>
 			</div>
 		</footer>
-		<!-- <div class="backdrop is-hidden" data-modal>
+		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button data-modal-close class="btn-close">
 					<svg width="18" height="18">
@@ -550,7 +550,7 @@
 				</form>
 			</div>
 		</div>
-		<script src="./js/modal.js"></script> -->
+		<script src="./js/modal.js"></script>
 		<script src="./js/menu.js"></script>
 		
 	</body>
