--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			<section class="occupation">
 				<div class="container">
 					<h2 class="title">Чим ми займаємося</h2>
-					<ul class="ocuppation__list list">
+					<ul class="occupation__list list">
 						<li class="occupation__item">
 							<div class="occupation__img-thumb">
 								<img src="./images/employment-img1.jpg" alt="employment" width="370" height="294" />
