--- a/portfolio.html
+++ b/portfolio.html
@@ -186,76 +186,76 @@
 			</section>
 		</main>
 		<footer class="footer">
-			<div class="container">
-				<div class="container-footer">
-					<a class="logo footer-logo" href=""> <span class="logo-part-one">Web</span>Studio</a>
-					<address>
-						<ul class="footer-list list">
-							<li class="footer-item">
-								<a
-									class="footer-item link contacts-address"
-									href="https://goo.gl/maps/geFY9pYuJp3y2TrKA"
-									target="_blank"
-									rel="noopener noreferrer"
-								>
-									м.Київ, пр-т Лесі Українки,26</a
-								>
+			<div class="container container-footer">
+				<div class="footer-tab">
+					<div class="container-adress">
+						<a class="logo footer-logo" href=""> <span class="logo-part-one">Web</span>Studio</a>
+						<address>
+							<ul class="footer-list list">
+								<li class="footer-item">
+									<a class="footer-item link contacts-address" href="https://goo.gl/maps/geFY9pYuJp3y2TrKA"
+										target="_blank" rel="noopener noreferrer">
+										м.Київ, пр-т Лесі Українки,26</a>
+								</li>
+								<li class="footer-item">
+									<a class="footer-item-mail link contacts-address" href="mailto:info@devstudio.com">
+										info@devstudio.com</a>
+								</li>
+								<li class="footer-item">
+									<a class="footer-item-tel link contacts-address" href="tel:+380961111111">+38 096 111 11
+										11</a>
+								</li>
+							</ul>
+						</address>
+					</div>
+					<div class="container-footer-second">
+						<p class="footer-soc-title">приєднуйтесь</p>
+						<ul class="list">
+							<li class="team-soc-item">
+								<a class="team-soc-link" href="">
+									<svg class="team-soc-icon" width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-instagram"></use>
+									</svg>
+								</a>
 							</li>
-							<li class="footer-item">
-								<a class="footer-item-mail link contacts-address" href="mailto:info@devstudio.com">
-									info@devstudio.com</a
-								>
+							<li class="team-soc-item">
+								<a class="team-soc-link" href="">
+									<svg class="team-soc-icon" width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-twitter"></use>
+									</svg>
+								</a>
 							</li>
-							<li class="footer-item">
-								<a class="footer-item-tel link contacts-address" href="tel:+380961111111">+38 096 111 11 11</a>
+							<li class="team-soc-item">
+								<a class="team-soc-link" href="">
+									<svg class="team-soc-icon" width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="team-soc-item">
+								<a class="team-soc-link" href="">
+									<svg class="team-soc-icon" width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+									</svg>
+								</a>
 							</li>
 						</ul>
-					</address>
-				</div>
-				<div class="container-footer-second">
-					<p class="footer-soc-title">приєднуйтесь</p>
-					<ul class="list">
-						<li class="team-soc-item">
-							<a class="team-soc-link" href="">
-								<svg class="team-soc-icon" width="20" height="20">
-									<use href="./images/symbol-defs.svg#icon-instagram"></use>
-								</svg>
-							</a>
-						</li>
-						<li class="team-soc-item">
-							<a class="team-soc-link" href="">
-								<svg class="team-soc-icon" width="20" height="20">
-									<use href="./images/symbol-defs.svg#icon-twitter"></use>
-								</svg>
-							</a>
-						</li>
-						<li class="team-soc-item">
-							<a class="team-soc-link" href="">
-								<svg class="team-soc-icon" width="20" height="20">
-									<use href="./images/symbol-defs.svg#icon-facebook"></use>
-								</svg>
-							</a>
-						</li>
-						<li class="team-soc-item">
-							<a class="team-soc-link" href="">
-								<svg class="team-soc-icon" width="20" height="20">
-									<use href="./images/symbol-defs.svg#icon-linkedin"></use>
-								</svg>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<form class="subscription-box">
-					<div class="footer-input-box">
-						<input type="email" class="footer-input" placeholder="E-mail" id="mail">
-						<label for="mail" class="footer-label">Підпишіться на розсилку</label>
 					</div>
-					<button type="submit" class="footer-btn">Підписатися
-						<svg class="icon-send" width="24" height="24">
-							<use href="./images/symbol-defs.svg#icon-icon-send"></use>
-						</svg>
-					</button>
-				</form>
+				</div>
+		
+				<div class="footer-subscribe">
+					<form class="subscription-box">
+						<div class="footer-input-box">
+							<label for="mail" class="footer-label">Підпишіться на розсилку</label>
+							<input type="email" name="email" class="footer-input" placeholder="E-mail" id="mail" />
+						</div>
+						<button type="submit" class="footer-btn">Підписатися
+							<svg class="icon-send" width="24" height="24">
+								<use href="./images/symbol-defs.svg#icon-icon-send"></use>
+							</svg>
+						</button>
+					</form>
+				</div>
 			</div>
 		</footer>
 	</body>
